--- a/Interviews/Hireart Interview Question.ipynb
+++ b/Interviews/Hireart Interview Question.ipynb
@@ -42,6 +42,8 @@
     }
    ],
    "source": [
+    "# Quick response\n",
+    "\n",
     "ax = sns.barplot(x = pinterest_data['month'].value_counts().index,\n",
     "           y = pinterest_data['month'].value_counts()/pinterest_data.shape[0])\n",
     "ax.set_title('Contact Month')"
@@ -49,10 +51,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "opacity": 0.7,
+         "type": "bar",
+         "uid": "9248538c-7b8f-4216-a9f0-b41cec5a0542",
+         "x": [
+          10,
+          9,
+          8,
+          12,
+          6,
+          5,
+          7,
+          11,
+          2,
+          1,
+          3,
+          4
+         ],
+         "y": [
+          0.2127872127872128,
+          0.12087912087912088,
+          0.07892107892107893,
+          0.07692307692307693,
+          0.07692307692307693,
+          0.06893106893106893,
+          0.06593406593406594,
+          0.06493506493506493,
+          0.06393606393606394,
+          0.059940059940059943,
+          0.057942057942057944,
+          0.05194805194805195
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Contact Month",
+        "yaxis": {
+         "title": "Client contact %"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"1fd649c4-4cb4-4d30-b34c-584a5660be19\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1fd649c4-4cb4-4d30-b34c-584a5660be19\", [{\"opacity\": 0.7, \"x\": [10, 9, 8, 12, 6, 5, 7, 11, 2, 1, 3, 4], \"y\": [0.2127872127872128, 0.12087912087912088, 0.07892107892107893, 0.07692307692307693, 0.07692307692307693, 0.06893106893106893, 0.06593406593406594, 0.06493506493506493, 0.06393606393606394, 0.059940059940059943, 0.057942057942057944, 0.05194805194805195], \"type\": \"bar\", \"uid\": \"9248538c-7b8f-4216-a9f0-b41cec5a0542\"}], {\"title\": \"Contact Month\", \"yaxis\": {\"title\": \"Client contact %\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){window._Plotly.Plots.resize(document.getElementById(\"1fd649c4-4cb4-4d30-b34c-584a5660be19\"));});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"1fd649c4-4cb4-4d30-b34c-584a5660be19\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1fd649c4-4cb4-4d30-b34c-584a5660be19\", [{\"opacity\": 0.7, \"x\": [10, 9, 8, 12, 6, 5, 7, 11, 2, 1, 3, 4], \"y\": [0.2127872127872128, 0.12087912087912088, 0.07892107892107893, 0.07692307692307693, 0.07692307692307693, 0.06893106893106893, 0.06593406593406594, 0.06493506493506493, 0.06393606393606394, 0.059940059940059943, 0.057942057942057944, 0.05194805194805195], \"type\": \"bar\", \"uid\": \"9248538c-7b8f-4216-a9f0-b41cec5a0542\"}], {\"title\": \"Contact Month\", \"yaxis\": {\"title\": \"Client contact %\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){window._Plotly.Plots.resize(document.getElementById(\"1fd649c4-4cb4-4d30-b34c-584a5660be19\"));});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Quality response (You can hover over the bars to see the actual percentage)\n",
+    "\n",
+    "# Plotly packages\n",
+    "import cufflinks as cf\n",
+    "import ipywidgets as widgets\n",
+    "import plotly as py\n",
+    "import plotly.figure_factory as ff\n",
+    "import plotly.graph_objs as go\n",
+    "from plotly import tools\n",
+    "from scipy import special\n",
+    "py.offline.init_notebook_mode(connected=True)\n",
+    "\n",
+    "# The input is the number of negative tweets by reason\n",
+    "data = [go.Bar(\n",
+    "    x = pinterest_data['month'].value_counts().index,\n",
+    "    y = pinterest_data['month'].value_counts()/pinterest_data.shape[0],\n",
+    "    opacity = 0.7\n",
+    ")]\n",
+    "\n",
+    "# Create the layout\n",
+    "layout = go.Layout(\n",
+    "    title = 'Contact Month',\n",
+    "    yaxis = dict(title='Client contact %')\n",
+    ")\n",
+    "\n",
+    "fig = go.Figure(data = data, layout = layout)\n",
+    "py.offline.iplot(fig, filename='cufflinks/simple')"
+   ]
   }
  ],
  "metadata": {
