--- a/Interviews/Hireart Interview Question.ipynb
+++ b/Interviews/Hireart Interview Question.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "Text(0.5,1,'Contact Month')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -47,6 +47,148 @@
     "ax = sns.barplot(x = pinterest_data['month'].value_counts().index,\n",
     "           y = pinterest_data['month'].value_counts()/pinterest_data.shape[0])\n",
     "ax.set_title('Contact Month')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001, 4)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pinterest_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Account manager</th>\n",
+       "      <th>Client Name</th>\n",
+       "      <th>Date of Contact</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Milan Crona</td>\n",
+       "      <td>Wyman, Farrell and Haag</td>\n",
+       "      <td>2015-10-31</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aidan Pouros</td>\n",
+       "      <td>Veum, McClure and Schuster</td>\n",
+       "      <td>2013-12-15</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aidan Pouros</td>\n",
+       "      <td>Veum, McClure and Schuster</td>\n",
+       "      <td>2013-12-07</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Milan Crona</td>\n",
+       "      <td>Armstrong Group</td>\n",
+       "      <td>2013-11-02</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aidan Pouros</td>\n",
+       "      <td>Lueilwitz, Moore and Hahn</td>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Account manager                 Client Name Date of Contact  month\n",
+       "0     Milan Crona     Wyman, Farrell and Haag      2015-10-31     10\n",
+       "1    Aidan Pouros  Veum, McClure and Schuster      2013-12-15     12\n",
+       "2    Aidan Pouros  Veum, McClure and Schuster      2013-12-07     12\n",
+       "3     Milan Crona             Armstrong Group      2013-11-02     11\n",
+       "4    Aidan Pouros   Lueilwitz, Moore and Hahn      2013-12-25     12"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pinterest_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10    213\n",
+       "9     121\n",
+       "8      79\n",
+       "12     77\n",
+       "6      77\n",
+       "5      69\n",
+       "7      66\n",
+       "11     65\n",
+       "2      64\n",
+       "1      60\n",
+       "3      58\n",
+       "4      52\n",
+       "Name: month, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pinterest_data['month'].value_counts()"
    ]
   },
   {
