--- a/Personal_Projects/Zillow_Regressor.ipynb
+++ b/Personal_Projects/Zillow_Regressor.ipynb
@@ -110,244 +110,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the data\n",
-    "data_2016 = pd.read_csv('properties_2016.csv', engine='python', skiprows=lambda i: i>0 and random.random() > 0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>parcelid</th>\n",
-       "      <th>airconditioningtypeid</th>\n",
-       "      <th>architecturalstyletypeid</th>\n",
-       "      <th>basementsqft</th>\n",
-       "      <th>bathroomcnt</th>\n",
-       "      <th>bedroomcnt</th>\n",
-       "      <th>buildingclasstypeid</th>\n",
-       "      <th>buildingqualitytypeid</th>\n",
-       "      <th>calculatedbathnbr</th>\n",
-       "      <th>decktypeid</th>\n",
-       "      <th>...</th>\n",
-       "      <th>numberofstories</th>\n",
-       "      <th>fireplaceflag</th>\n",
-       "      <th>structuretaxvaluedollarcnt</th>\n",
-       "      <th>taxvaluedollarcnt</th>\n",
-       "      <th>assessmentyear</th>\n",
-       "      <th>landtaxvaluedollarcnt</th>\n",
-       "      <th>taxamount</th>\n",
-       "      <th>taxdelinquencyflag</th>\n",
-       "      <th>taxdelinquencyyear</th>\n",
-       "      <th>censustractandblock</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>13115547</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>232.18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13137147</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>659.34</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>76914547</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61072.0</td>\n",
-       "      <td>176899.0</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>115827.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17079308</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>66416.0</td>\n",
-       "      <td>199265.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>132849.0</td>\n",
-       "      <td>2196.14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.111003e+13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17201376</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>241694.0</td>\n",
-       "      <td>402820.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>161126.0</td>\n",
-       "      <td>4426.76</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.111008e+13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 58 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   parcelid  airconditioningtypeid  architecturalstyletypeid  basementsqft  \\\n",
-       "0  13115547                    NaN                       NaN           NaN   \n",
-       "1  13137147                    NaN                       NaN           NaN   \n",
-       "2  76914547                    1.0                       NaN           NaN   \n",
-       "3  17079308                    NaN                       NaN           NaN   \n",
-       "4  17201376                    NaN                       NaN           NaN   \n",
-       "\n",
-       "   bathroomcnt  bedroomcnt  buildingclasstypeid  buildingqualitytypeid  \\\n",
-       "0          0.0         0.0                  NaN                    NaN   \n",
-       "1          0.0         0.0                  NaN                    NaN   \n",
-       "2          1.0         1.0                  NaN                    NaN   \n",
-       "3          1.0         2.0                  NaN                    NaN   \n",
-       "4          3.0         3.0                  NaN                    NaN   \n",
-       "\n",
-       "   calculatedbathnbr  decktypeid         ...           numberofstories  \\\n",
-       "0                NaN         NaN         ...                       NaN   \n",
-       "1                NaN         NaN         ...                       NaN   \n",
-       "2                1.0         NaN         ...                       NaN   \n",
-       "3                1.0         NaN         ...                       1.0   \n",
-       "4                3.0        66.0         ...                       2.0   \n",
-       "\n",
-       "   fireplaceflag  structuretaxvaluedollarcnt  taxvaluedollarcnt  \\\n",
-       "0            NaN                         NaN                NaN   \n",
-       "1            NaN                         NaN                NaN   \n",
-       "2            NaN                     61072.0           176899.0   \n",
-       "3            NaN                     66416.0           199265.0   \n",
-       "4            NaN                    241694.0           402820.0   \n",
-       "\n",
-       "   assessmentyear  landtaxvaluedollarcnt  taxamount  taxdelinquencyflag  \\\n",
-       "0          2015.0                    NaN     232.18                 NaN   \n",
-       "1          2015.0                    NaN     659.34                 NaN   \n",
-       "2          2014.0               115827.0        NaN                 NaN   \n",
-       "3          2015.0               132849.0    2196.14                 NaN   \n",
-       "4          2015.0               161126.0    4426.76                 NaN   \n",
-       "\n",
-       "   taxdelinquencyyear  censustractandblock  \n",
-       "0                 NaN                  NaN  \n",
-       "1                 NaN                  NaN  \n",
-       "2                 NaN                  NaN  \n",
-       "3                 NaN         6.111003e+13  \n",
-       "4                 NaN         6.111008e+13  \n",
-       "\n",
-       "[5 rows x 58 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# Import the data (note that this is just a sample)\n",
+    "data_2016 = pd.read_csv('properties_2016.csv', engine='python', skiprows=lambda i: i>0 and random.random() > 0.01)\n",
+    "\n",
     "# Preview the data\n",
     "data_2016.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +145,8 @@
        "      <th></th>\n",
        "      <th>parcelid</th>\n",
        "      <th>logerror</th>\n",
-       "      <th>transactiondate</th>\n",
+       "      <th>transaction_month</th>\n",
+       "      <th>transaction_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -381,75 +154,67 @@
        "      <th>0</th>\n",
        "      <td>11016594</td>\n",
        "      <td>0.0276</td>\n",
-       "      <td>2016-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>14366692</td>\n",
        "      <td>-0.1684</td>\n",
-       "      <td>2016-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>12098116</td>\n",
        "      <td>-0.0040</td>\n",
-       "      <td>2016-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>12643413</td>\n",
        "      <td>0.0218</td>\n",
-       "      <td>2016-01-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>14432541</td>\n",
        "      <td>-0.0050</td>\n",
-       "      <td>2016-01-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   parcelid  logerror transactiondate\n",
-       "0  11016594    0.0276      2016-01-01\n",
-       "1  14366692   -0.1684      2016-01-01\n",
-       "2  12098116   -0.0040      2016-01-01\n",
-       "3  12643413    0.0218      2016-01-02\n",
-       "4  14432541   -0.0050      2016-01-02"
+       "   parcelid  logerror  transaction_month  transaction_year\n",
+       "0  11016594    0.0276                  1              2016\n",
+       "1  14366692   -0.1684                  1              2016\n",
+       "2  12098116   -0.0040                  1              2016\n",
+       "3  12643413    0.0218                  1              2016\n",
+       "4  14432541   -0.0050                  1              2016"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import target data\n",
     "train_2016 = pd.read_csv('train_2016_v2.csv')\n",
     "\n",
+    "# Convert date to month and year\n",
+    "train_2016['transactiondate'] = train_2016['transactiondate'].astype('datetime64[ns]')\n",
+    "train_2016['transaction_month'] = train_2016['transactiondate'].dt.month\n",
+    "train_2016['transaction_year'] = train_2016['transactiondate'].dt.year\n",
+    "train_2016.drop(['transactiondate'], axis=1, inplace=True)\n",
+    "\n",
+    "# Preview the target data\n",
     "train_2016.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df = pd.concat([data_2016, train_2016], axis=1, join_axes=[data_2016.parcelid])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q1, q3 = np.percentile(train_2016['logerror'],[25,75])\n",
-    "iqr = q3 - q1\n",
-    "lb = q1 - (1.5 * iqr)\n",
-    "ub = q3 + (1.5 * iqr)"
    ]
   },
   {
@@ -497,6 +262,16 @@
     }
    ],
    "source": [
+    "# Combine the datasets\n",
+    "train_df = pd.concat([data_2016, train_2016], axis=1, join_axes=[data_2016.parcelid])\n",
+    "\n",
+    "# Determine outliers in the outcome variable\n",
+    "q1, q3 = np.percentile(train_2016['logerror'],[25,75])\n",
+    "iqr = q3 - q1\n",
+    "lb = q1 - (1.5 * iqr)\n",
+    "ub = q3 + (1.5 * iqr)\n",
+    "\n",
+    "# Plot the logerror in the target dataset\n",
     "ulimit = np.percentile(train_2016.logerror.values, 99)\n",
     "llimit = np.percentile(train_2016.logerror.values, 1)\n",
     "train_2016['logerror'].ix[train_2016['logerror']>ulimit] = ulimit\n",
@@ -1156,7 +931,7 @@
     "#             line = dict(\n",
     "#                 width=1,\n",
     "#                 color='rgba(102, 102, 102)'\n",
-    "#             ),\n",
+    "#             ),m\n",
     "#             colorscale = scl,\n",
     "#             cmin = 0,\n",
     "# #             color = data_2016['cnt'],\n",
