Updated answer to question 3

--- a/Interviews/Fetch/2.SQL_Questions.ipynb
+++ b/Interviews/Fetch/2.SQL_Questions.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e2fc13af-1e3b-426f-98c5-05ada148bc7c",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "74209bce-0b71-4eaf-ae9a-126edd65a08c",
    "metadata": {},
    "outputs": [
@@ -109,11 +109,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('NERDS CANDY', 3)\n",
+      "('DOVE', 3)\n",
       "('TRIDENT', 2)\n",
       "('SOUR PATCH KIDS', 2)\n",
-      "('NERDS CANDY', 2)\n",
-      "('DOVE', 2)\n",
-      "('UTZ', 1)\n"
+      "('MEIJER', 2)\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "47ac61c0-1fb6-42c7-972b-2cd12d4424c6",
    "metadata": {},
    "outputs": [
@@ -173,11 +173,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('TRIDENT', 2, 23.36)\n",
-      "('DOVE', 2, 18.94)\n",
-      "('COORS LIGHT', 1, 17.48)\n",
-      "('TRESEMMÉ', 1, 14.58)\n",
-      "('PEPPERIDGE FARM', 1, 12.15)\n"
+      "('CVS', 1, 144.0)\n",
+      "('DOVE', 3, 61.82)\n",
+      "('TRIDENT', 2, 46.72)\n",
+      "('COORS LIGHT', 1, 34.96)\n",
+      "('TRESEMMÉ', 1, 29.16)\n"
      ]
     }
    ],
@@ -219,17 +219,17 @@
    "metadata": {},
    "source": [
     "### 3. What is the percentage of sales in the Health & Wellness category by [age] generation?\n",
-    "* 'Zoomers', 0.0\n",
-    "* 'Millenials', 19.43\n",
-    "* 'X',16.88\n",
-    "* 'Boomers', 27.66\n",
-    "* 'Silent', 0.0\n",
-    "* 'Other', 24.16 - missing birth_date"
+    "* Silent, 0.0\n",
+    "* Boomers, 37.31\n",
+    "* X, 22.36\n",
+    "* Millenials, 19.24\n",
+    "* Zoomers, 0\n",
+    "* Other, 24.9 - missing birth_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a9c6c838-f767-43f3-a63e-35e26d7f16e8",
    "metadata": {},
    "outputs": [
@@ -238,10 +238,11 @@
      "output_type": "stream",
      "text": [
       "('3.Silent', 0.0)\n",
-      "('4.Boomers', 3.57)\n",
-      "('5.X', 24.15)\n",
-      "('6.Millenials', 17.47)\n",
-      "('Other', 26.22)\n"
+      "('4.Boomers', 37.31)\n",
+      "('5.X', 22.36)\n",
+      "('6.Millenials', 19.24)\n",
+      "('7.Zoomers', 0.0)\n",
+      "('Other', 24.9)\n"
      ]
     }
    ],
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8e8ef033-c308-487a-b020-a1d5c62f2c62",
    "metadata": {},
    "outputs": [
@@ -293,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13918.78, 53089.96, 26.2173)\n"
+      "(54777.04, 219966.32, 24.9025)\n"
      ]
     }
    ],
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a282f1ba-9964-49ab-87df-61822559d611",
    "metadata": {},
    "outputs": [
@@ -348,16 +349,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('TOSTITOS', 21, 22.0, 97.34)\n",
-      "('PACE', 13, 13.0, 48.69)\n",
-      "('GOOD FOODS', 5, 5.0, 46.95)\n",
-      "('FRITOS', 12, 13.0, 43.55)\n",
-      "(None, 8, 8.0, 43.16)\n",
-      "('MARKETSIDE', 8, 8.0, 35.7)\n",
-      "('MARZETTI', 7, 7.0, 32.05)\n",
-      "('HELUVA GOOD!', 7, 7.0, 25.26)\n",
-      "('KIRKLAND SIGNATURE', 2, 2.0, 23.48)\n",
-      "('HIDDEN VALLEY', 6, 12.0, 23.14)\n"
+      "('TOSTITOS', 36, 76.0, 362.32)\n",
+      "(None, 21, 44.0, 201.94)\n",
+      "('GOOD FOODS', 9, 18.0, 189.82)\n",
+      "('PACE', 24, 48.0, 171.15)\n",
+      "('FRITOS', 19, 40.0, 134.72)\n",
+      "('MARKETSIDE', 16, 32.0, 130.73)\n",
+      "('HELUVA GOOD!', 15, 30.0, 106.56)\n",
+      "('MARZETTI', 11, 22.0, 102.47)\n",
+      "('FRESHNESS GUARANTEED', 12, 24.0, 93.32)\n",
+      "(\"DEAN'S DAIRY DIP\", 17, 34.0, 79.9)\n"
      ]
     }
    ],
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "40e046fd-b607-40cc-86fe-32f9ada5c017",
    "metadata": {},
    "outputs": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e81ada76-70fa-4226-aa94-b8462099821b",
    "metadata": {},
    "outputs": [
@@ -459,7 +460,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10143, 10190)\n"
+      "(17603, 17694)\n"
      ]
     }
    ],
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "a2e422a6-049b-436a-ad27-00bc3d134e41",
    "metadata": {},
    "outputs": [
@@ -501,7 +502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('1943-09-03 05:00:00.000 Z', '1996-05-20 00:00:00.000 Z')\n"
+      "('1943-09-03 05:00:00.000 Z', '1997-02-25 00:00:00.000 Z')\n"
      ]
     }
    ],
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7ff4a801-8793-4ea9-8c20-f1e0b1be13ed",
    "metadata": {},
    "outputs": [
@@ -550,26 +551,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('WALMART', 5176, 5585.99, 20777.59, 38.93)\n",
-      "('COSTCO', 255, 243.0, 3261.19, 6.11)\n",
-      "('TARGET', 385, 434.0, 2549.11, 4.78)\n",
-      "(\"SAM'S CLUB\", 234, 226.0, 2484.94, 4.66)\n",
-      "('DOLLAR GENERAL STORE', 674, 736.0, 2226.76, 4.17)\n",
-      "('WALGREENS', 259, 281.0, 1994.33, 3.74)\n",
-      "('CVS', 308, 244.0, 1298.07, 2.43)\n",
-      "('MEIJER', 292, 363.22, 1287.58, 2.41)\n",
-      "('KROGER', 359, 349.0, 1205.38, 2.26)\n",
-      "('AMAZON', 77, 90.0, 1099.34, 2.06)\n",
-      "('Snacks', 326277, 3961.86, 15242.6, 28.56)\n",
-      "('Health & Wellness', 512971, 1785.0, 13960.05, 26.16)\n",
-      "('Beverages', 4284, 508.0, 2363.11, 4.43)\n",
-      "(None, 290, 195.47, 866.21, 1.62)\n",
-      "('Alcohol', 509, 27.0, 365.0, 0.68)\n",
-      "('Pantry', 891, 62.17, 247.02, 0.46)\n",
-      "('Dairy', 619, 49.0, 167.84, 0.31)\n",
-      "('Deli & Bakery', 71, 9.0, 53.95, 0.1)\n",
-      "('Frozen', 62, 4.0, 25.0, 0.05)\n",
-      "('Needs Review', 547, 2.0, 1.45, 0.0)\n"
+      "('WALMART', 10347, 22253.1, 82505.55, 37.31)\n",
+      "('COSTCO', 510, 996.0, 13200.36, 5.97)\n",
+      "(\"SAM'S CLUB\", 504, 1015.0, 11140.130000000001, 5.04)\n",
+      "('TARGET', 739, 1640.0, 9239.36, 4.18)\n",
+      "('DOLLAR GENERAL STORE', 1360, 2981.0, 8918.210000000001, 4.03)\n",
+      "('WALGREENS', 559, 1242.0, 8365.08, 3.78)\n",
+      "('CVS', 579, 1056.0, 7921.91, 3.58)\n",
+      "('ALDI', 1278, 2337.77, 5701.68, 2.58)\n",
+      "('MEIJER', 576, 1471.62, 5449.69, 2.46)\n",
+      "('KROGER', 725, 1451.38, 5448.5, 2.46)\n",
+      "('Snacks', 336271, 16001.32, 61706.24, 27.91)\n",
+      "('Health & Wellness', 516969, 7114.6, 55096.12, 24.92)\n",
+      "('Beverages', 5465, 1911.7, 8707.5, 3.94)\n",
+      "(None, 808, 758.47, 3181.29, 1.44)\n",
+      "('Alcohol', 577, 113.0, 1620.99, 0.73)\n",
+      "('Pantry', 1010, 209.34, 829.67, 0.38)\n",
+      "('Dairy', 722, 169.0, 571.03, 0.26)\n",
+      "('Deli & Bakery', 86, 28.0, 149.2, 0.07)\n",
+      "('Frozen', 84, 28.0, 139.09, 0.06)\n",
+      "('Needs Review', 561, 22.0, 120.66, 0.05)\n"
      ]
     }
    ],
@@ -629,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "6994ef4c-97b7-4d54-ba57-2fe5b1fa367c",
    "metadata": {},
    "outputs": [
@@ -637,16 +638,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(None, 60899, 692.16, 3512.76)\n",
-      "('Cola', 2794, 443.0, 2201.66)\n",
-      "('Chocolate Candy', 47956, 570.0, 1702.94)\n",
-      "('Vitamins & Herbal Supplements', 55708, 117.0, 1560.39)\n",
-      "('Confection Candy', 57074, 382.55, 1071.98)\n",
-      "('Potato Chips', 11336, 301.0, 1037.95)\n",
-      "('Tortilla Chips', 4049, 203.0, 784.06)\n",
-      "('Body Wash', 15092, 94.0, 746.7)\n",
-      "('Allergy & Sinus Medicines & Treatments', 5798, 47.0, 696.16)\n",
-      "('Digestive Health Medicines & Treatments', 9603, 71.0, 574.34)\n"
+      "(None, 62678, 2803.85, 14120.74)\n",
+      "('Cola', 3859, 1685.7, 8124.44)\n",
+      "('Chocolate Candy', 49403, 2341.99, 7070.02)\n",
+      "('Vitamins & Herbal Supplements', 55930, 429.6, 5852.23)\n",
+      "('Potato Chips', 12258, 1327.59, 4460.72)\n",
+      "('Confection Candy', 57934, 1430.37, 3775.49)\n",
+      "('Tortilla Chips', 4624, 840.18, 3282.59)\n",
+      "('Allergy & Sinus Medicines & Treatments', 5922, 220.0, 2960.52)\n",
+      "('Body Wash', 15306, 367.0, 2799.76)\n",
+      "('Digestive Health Medicines & Treatments', 9755, 276.0, 2497.02)\n"
      ]
     }
    ],
@@ -680,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2f18a2a2-a027-4be0-ae38-955b22350ecf",
    "metadata": {},
    "outputs": [
@@ -688,7 +689,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10143, 99953, 10190, 100000)\n"
+      "(17603, 99909, 17694, 100000)\n"
      ]
     }
    ],
